@@ -661,6 +661,15 @@ class Doctrine_Collection extends Doctrine_Access implements Countable, Iterator
         
         return $data;
     }
+
+    /**
+     * fromArray
+     *
+     * Populate a Doctrine_Collection from an array of data
+     *
+     * @param string $array 
+     * @return void
+     */
     public function fromArray($array)
     {
         $data = array();
@@ -671,6 +680,43 @@ class Doctrine_Collection extends Doctrine_Access implements Countable, Iterator
             $this[] = $record;
         }
     }
+
+    /**
+     * synchronizeWithArray
+     * synchronizes a Doctrine_Collection with data from an array
+     *
+     * it expects an array representation of a Doctrine_Collection similar to the return
+     * value of the toArray() method. It will create Dectrine_Records that don't exist
+     * on the collection, update the ones that do and remove the ones missing in the $array
+     *
+     * @param array $array representation of a Doctrine_Collection
+     */
+    public function synchronizeWithArray(array $array)
+    {
+        foreach ($this as $key => $record) {
+            if (isset($array[$key])) {
+                $record->synchronizeWithArray($array[$key]);
+                unset($array[$key]);
+            } else {
+                // remove records that don't exist in the array
+                $this->remove($key);
+            }
+        }
+        // create new records for each new row in the array
+        foreach ($array as $rowKey => $row) {
+            $this[$rowKey]->fromArray($row);
+        }
+    }
+
+    /**
+     * exportTo
+     *
+     * Export a Doctrine_Collection to one of the supported Doctrine_Parser formats
+     *
+     * @param string $type 
+     * @param string $deep 
+     * @return void
+     */
     public function exportTo($type, $deep = false)
     {
         if ($type == 'array') {
@@ -679,6 +725,16 @@ class Doctrine_Collection extends Doctrine_Access implements Countable, Iterator
             return Doctrine_Parser::dump($this->toArray($deep, true), $type);
         }
     }
+
+    /**
+     * importFrom
+     *
+     * Import data to a Doctrine_Collection from one of the supported Doctrine_Parser formats
+     *
+     * @param string $type 
+     * @param string $data 
+     * @return void
+     */
     public function importFrom($type, $data)
     {
         if ($type == 'array') {
@@ -687,10 +743,22 @@ class Doctrine_Collection extends Doctrine_Access implements Countable, Iterator
             return $this->fromArray(Doctrine_Parser::load($data, $type));
         }
     }
+
+    /**
+     * getDeleteDiff
+     *
+     * @return void
+     */
     public function getDeleteDiff()
     {
         return array_udiff($this->_snapshot, $this->data, array($this, "compareRecords"));
     }
+
+    /**
+     * getInsertDiff
+     *
+     * @return void
+     */
     public function getInsertDiff()
     {
         return array_udiff($this->data, $this->_snapshot, array($this, "compareRecords"));
