@@ -1,3 +1,7 @@
+------
+
+* r3514: Merged Doctrine_Record and Doctrine_Collection synchronizeWithArray method
+
 Beta 2
 ------
 
